[package]
name = "bip-rier"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
hidapi = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
